Update deep link URL in callback.html

--- a/auth/callback.html
+++ b/auth/callback.html
@@ -12,7 +12,7 @@
         const error = urlParams.get('error');
         
         // Redirect back to app with the code
-        const appDeepLink = `https://oktademo/?code=${code}&state=${state}`;
+        const appDeepLink = `https://sureshj419.github.io/?code=${code}&state=${state}`;
         
         // Try to open app
         window.location.href = appDeepLink;
