--- a/auth/redirect.html
+++ b/auth/redirect.html
@@ -1,6 +1,6 @@
 <html>
 <body>
   <p>Login successful. If you are not redirected, tap below:</p>
-  <a href="https://oktademo?code=1234">Return to App</a>
+  <a href="oktademo://?code=1234">Return to App</a>
 </body>
 </html>
